k8s/ingress/ingress-service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: hi-nginx-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    name: nginix-ingress
