k8s/ingress/ingress-resources-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-class
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hi-web-service
            port:
              number: 80
